src/components/Note/NoteAuthorList/NoteAuthorList.scss
@import "src/constants/style.scss";

$overlap-margin: -10px;
$name-gap: 4px;
$stack-author-rest-author-gap: 8px;
$avatar-size: 28px;
$max-name-length: 112px;

// --self classes: indicates yourself as the stack author,
// which is highlighted by the accent color of that column

.note-author-list {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: $stack-author-rest-author-gap;
}

.note-author__container {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: $name-gap;
  border-radius: $rounded--full;
  overflow: hidden; // always try to fit content (by cutting the author name)
}

.note-author__container--self {
  background: var(--accent-color--desaturated-light);
  padding-right: $spacing--base;
  width: max-content;
}

.note-rest-authors__container {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.note__author {
  // reset css from figure-element:
  border: 0;

  font: inherit;
  height: $avatar-size;
  border-radius: $rounded--default;

  // reset margin and overlap avatars on top of each other
  margin: 0 0 0 $overlap-margin;

  &:first-of-type {
    // reset negative margin on first avatar
    margin: 0;
    // render above second avatar
    z-index: $note-z-index + 2;
  }

  &:nth-of-type(2) {
    // render above third avatar / rest bubble
    z-index: $note-z-index + 1;
  }
}

.note__user-avatar {
  width: $avatar-size;
  height: $avatar-size;
}

// the rest bubble should be about the same size as the avatars
.note-author-rest {
  display: inline-flex;
  width: $icon--medium;
  height: $icon--medium;
  font-size: $text--xs;
  color: $color-white;
  background-color: $menu-icon-background-color--dark;

  // add 1px because it's a little bit off in comparison to .note__author margin
  margin: 0 calc($name-gap + 1px) 0 $overlap-margin;

  justify-content: center;
  align-items: center;

  border: 1.5px solid $color-white-one;
  border-radius: $rounded--full;
}

.note-author-rest--self {
  border-color: $menu-icon-background-color--dark;
}

.note__author-name {
  color: $color-dark-gray;
  font-size: $text--xs;
  letter-spacing: $letter-spacing--small;
  max-width: $max-name-length;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.note__author--self > .note__user-avatar #Circle-Background {
  stroke: none;
}

.note__author-name--self {
  color: $color-black;
}

[theme="dark"] {
  .note-author__container--self {
    background: var(--accent-color--desaturated-dark);
  }

  .note__author-name {
    color: $color-white;
  }

  .note__author-name--self {
    font-weight: bold;
  }

  .note-author-rest {
    background-color: $color-icon-light-blue;
    color: $color-dark-two;
    border-color: $color-dark-one;
  }

  .note-author-rest--self {
    border-color: $color-icon-light-blue;
  }
}

